Animate /emotes views

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --configuration=production",
     "dockerize": "ng build --prod && docker build . -t registry.digitalocean.com/xiantis/7tv-app",
     "deploy": "docker push registry.digitalocean.com/xiantis/7tv-app",
     "test": "ng test",
