--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "~11.2.0",
     "@types/color": "^3.0.1",
     "@types/jasmine": "~3.6.0",
+    "@types/mongodb": "^3.6.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
