--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"typescript.preferences.quoteStyle": "single",
     "typescript.preferences.importModuleSpecifier": "non-relative",
+	"editor.tabSize": 4
 }
