--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "deploy": "docker push registry.digitalocean.com/xiantis/7tv-app",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run seventv-app:serve-ssr",
+    "serve:ssr": "node dist/seventv-app/server/main.js",
+    "build:ssr": "ng build --prod && ng run seventv-app:server:production",
+    "prerender": "ng run seventv-app:prerender"
   },
   "private": true,
   "dependencies": {
@@ -23,10 +27,13 @@
     "@angular/material": "^11.2.1",
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
+    "@angular/platform-server": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@nguniversal/express-engine": "^11.2.0",
     "bootstrap": "^4.5.0",
     "color": "^3.1.3",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -35,7 +42,9 @@
     "@angular-devkit/build-angular": "~0.1102.0",
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
+    "@nguniversal/builders": "^11.2.0",
     "@types/color": "^3.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/mongodb": "^3.6.8",
     "@types/node": "^12.11.1",
