--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run seventv-app:serve-ssr",
     "serve:ssr": "node dist/seventv-app/server/main.js",
-    "build:ssr": "ng build --prod && ng run seventv-app:server:production",
+    "build:ssr": "ng build --prod --build-optimizer --optimization --aot && ng run seventv-app:server:production",
     "prerender": "ng run seventv-app:prerender"
   },
   "private": true,
@@ -33,7 +33,9 @@
     "@nguniversal/express-engine": "^11.2.0",
     "bootstrap": "^4.5.0",
     "color": "^3.1.3",
+    "compression": "^1.7.4",
     "express": "^4.15.2",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -44,6 +46,7 @@
     "@angular/compiler-cli": "~11.2.0",
     "@nguniversal/builders": "^11.2.0",
     "@types/color": "^3.0.1",
+    "@types/compression": "^1.7.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/mongodb": "^3.6.8",
