Actions - workflow_dispatch input

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,8 +5,10 @@ on:
     branches: [master]
 
   workflow_dispatch:
-    branches: [actions-test]
-
+    inputs:
+      comment:
+        description: Comment on triggering this workflow
+        required: false
 jobs:
   build:
     runs-on: ubuntu-latest
