--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,3 +29,25 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           repository: seventv/app
           tag_with_ref: true
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: # Run this after build
+      - build
+
+    steps:
+        # Checkout repository
+        - uses: actions/checkout@v2
+
+        # Deploy to k8s
+        - name: Install kubectl&
+          uses: azure/setup-kubectl@v1
+
+        - name: Apply Deployment & Rollout
+          env:
+            KUBE_CONFIG_DATA: ${{ secrets.K8S_CONFIG }}
+          run: |
+            mkdir -p ~/.kube
+            (echo $KUBE_CONFIG_DATA | base64 -d) >> ~/.kube/config
+            kubectl config use-context 7tv-as-deployer
+            kubectl rollout restart -n 7tv sts/7tv-webapp
