--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration=production",
+    "build": "ng build --prod",
+    "watch": "ng build --watch --configuration=dev-sw",
     "dockerize": "ng build --prod && docker build . -t registry.digitalocean.com/xiantis/7tv-app",
-    "deploy": "docker push registry.digitalocean.com/xiantis/7tv-app",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev:ssr": "ng run seventv-app:serve-ssr",
     "serve:ssr": "node dist/seventv-app/server/main.js",
-    "build:ssr": "ng build --prod --build-optimizer --optimization --aot && ng run seventv-app:server:production",
+    "build:ssr": "ng build --prod ---aot --vendor-chunk --common-chunk --delete-output-path --build-optimizer --optimization --aot && ng run seventv-app:server:production",
     "prerender": "ng run seventv-app:prerender"
   },
   "private": true,
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/platform-server": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@angular/service-worker": "~11.2.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@nguniversal/express-engine": "^11.2.0",
     "bootstrap": "^4.5.0",
