Fix angular 12 build pipeline

--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
             "scripts": [],
             "vendorChunk": true,
             "extractLicenses": false,
+            "aot": true,
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
