--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^2.20.1",
     "express": "^4.15.2",
     "ngx-cookie-service": "^11.0.2",
+    "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "twitch-player": "^2.0.2",
