--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,16 @@ jobs:
         with:
           node-version: 12
 
+      - name: Install dependencies
+        run: npm run install
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
+
       - name: Build Image with Server-Side Rendering & Push to Packages
         uses: docker/build-push-action@v1
         with:
