--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
           node-version: 12
 
       - name: Install dependencies
-        run: npm run install
+        run: npm install
 
       - name: Cache dependencies
         uses: actions/cache@v2
