--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ngx-cookie-service": "^11.0.2",
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.0",
+    "ssr-window": "^3.0.0",
     "tslib": "^2.0.0",
     "twitch-player": "^2.0.2",
     "zone.js": "~0.11.4"
