--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -50,7 +50,7 @@ jobs:
     name: Deploy (Staging Environment)
     runs-on: ubuntu-latest
     needs: # Run this after build
-      - build-stage
+      - build
 
     steps:
         # Checkout repository
