CI - login to GHCR

--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -36,12 +36,16 @@ jobs:
           key: npm-${{ hashFiles('package-lock.json') }}
           restore-keys: npm-
 
-      - name: Build Image with Server-Side Rendering & Push to Packages
-        uses: docker/build-push-action@v2.5.0
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build Image with Server-Side Rendering & Push to Packages
+        uses: docker/build-push-action@v2.5.0
+        with:
           context: .
           file: Stage.Dockerfile
           push: true
