CI - fix prod  deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,14 +35,22 @@ jobs:
           key: npm-${{ hashFiles('package-lock.json') }}
           restore-keys: npm-
 
-      - name: Build Image with Server-Side Rendering & Push to Packages
-        uses: docker/build-push-action@v2.5.0
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build Image with Server-Side Rendering & Push to Packages
+        uses: docker/build-push-action@v2.5.0
+        with:
+          context: .
+          file: Stage.Dockerfile
           push: true
-          tags: ${{ github.sha }}
+          tags: |
+            ghcr.io/seventv/app:${{ github.sha }}
+            ghcr.io/seventv/app:latest
 
   deploy:
     runs-on: ubuntu-latest
