Change stage deploy branch (#36)
* Change stage deploy branch

* Fix PR branch workflow

* Set to on push

* Add on push

* Remove run

* Change POST -> PATCH

* Use param name insstead of body

* Remove push branch list

* Remove `push` trigger

* Use types synchronize, edited

* Use 'allow any branch' label to skip

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,8 +8,10 @@ updates:
       time: "00:00"
     open-pull-requests-limit: 10
     reviewers:
+      - anatoleam
       - troydota
     assignees:
+      - anatoleam
       - troydota
     commit-message:
       prefix: fix
@@ -23,8 +25,10 @@ updates:
       time: "00:00"
     open-pull-requests-limit: 10
     reviewers:
+      - anatoleam
       - troydota
     assignees:
+      - anatoleam
       - troydota
     commit-message:
       prefix: fix
