--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,11 +5,13 @@ on:
     branches:
       - master
       - dev
+      - stage
 
   pull_request:
     branches:
       - master
       - dev
+      - stage
 
 jobs:
   lint:
