Reference Typings as Submodule (#31)
* Reference Typings as Submodule

* Dereference as a node module

* CI - use submodules as stage

* CI - Build PR

* Update typings commit

* Update Typings

* CI - fix pr branch: add events

--- a/.github/workflows/fix-pr-branch.yaml
+++ b/.github/workflows/fix-pr-branch.yaml
@@ -2,7 +2,7 @@ name: Fix Base Branch
 
 on:
   pull_request:
-    types: [synchronize, edited]
+    types: [opened, synchronize, edited, ready_for_review]
     branches:
       - master
       - stage
