--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up NodeJS
         uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: '14'
 
       - name: Install dependencies
         run: npm install
@@ -34,6 +34,7 @@ jobs:
           path: ~/.npm
           key: npm-${{ hashFiles('package-lock.json') }}
           restore-keys: npm-
+          submodules: true
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1 
