--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build --configuration=production",
     "dev:build": "ng build --configuration=dev-sw",
     "watch": "ng build --watch --configuration=dev-sw",
-    "dockerize": "ng build --prod && docker build . -t registry.digitalocean.com/xiantis/7tv-app",
+    "dockerize": "ng build --configuration production && docker build . -t registry.digitalocean.com/xiantis/7tv-app",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -19,21 +19,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.3",
-    "@angular/cdk": "^12.0.4",
-    "@angular/common": "~12.0.3",
-    "@angular/compiler": "~12.0.3",
-    "@angular/core": "~12.0.3",
-    "@angular/forms": "~12.0.3",
-    "@angular/localize": "~12.0.3",
-    "@angular/material": "^12.0.4",
-    "@angular/platform-browser": "~12.0.3",
-    "@angular/platform-browser-dynamic": "~12.0.3",
-    "@angular/platform-server": "~12.0.3",
-    "@angular/router": "~12.0.3",
-    "@angular/service-worker": "~12.0.3",
+    "@angular/animations": "~12.1.1",
+    "@angular/cdk": "^12.1.1",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
+    "@angular/forms": "~12.1.1",
+    "@angular/localize": "~12.1.1",
+    "@angular/material": "^12.1.1",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/platform-server": "~12.1.1",
+    "@angular/router": "~12.1.1",
+    "@angular/service-worker": "~12.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
-    "@nguniversal/express-engine": "^12.0.1",
+    "@nguniversal/express-engine": "^12.1.0",
     "bootstrap": "^4.5.0",
     "color": "^3.1.3",
     "compression": "^1.7.4",
@@ -48,10 +48,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.3",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
-    "@nguniversal/builders": "^12.0.1",
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
+    "@nguniversal/builders": "^12.1.0",
     "@types/color": "^3.0.1",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.0",
