--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.0",
     "ssr-window": "^3.0.0",
+    "superagent": "^6.1.0",
     "tslib": "^2.0.0",
     "twitch-player": "^2.0.2",
     "zone.js": "~0.11.4"
@@ -58,6 +59,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/mongodb": "^3.6.8",
     "@types/node": "^12.11.1",
+    "@types/superagent": "^4.1.12",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
