Staged Pull Requests (#84)
* Staged Pull Request Workflow

* un-negate contains condition

* Run on self hosted

* on sync, open

* skip compile if staged

--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -7,6 +7,8 @@ jobs:
   pack:
     name: Compile
     runs-on: ubuntu-latest
+    # Cannot contain staged label
+    if: ${{ !contains(github.event.pull_request.labels.*.name, 'staged') }}
 
     steps:
       - name: Checkout
