Stop SSR on all routes (#83)
* Stop SSR on all routes

* Insert OpenGraph/OEmbed by proxy

* Update environment.ts

* Upsate k8s resource limits

* Fix default tags

* Fix meta user color

--- a/k8s/production.yaml
+++ b/k8s/production.yaml
@@ -18,10 +18,10 @@ spec:
         command: ["npm", "run", "serve:ssr"]
         resources:
           requests:
-            memory: "200M"
+            memory: "300M"
             cpu: "300m"
           limits:
-            memory: "400M"
+            memory: "1Gi"
             cpu: "1500m"
         ports:
         - containerPort: 4000
