--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,6 +2,7 @@ version: 2
 updates:
   # Fetch and update latest `npm` packages
   - package-ecosystem: npm
+    target-branch: dev
     directory: "/"
     schedule:
       interval: daily
@@ -19,6 +20,7 @@ updates:
       include: scope
   # Fetch and update latest `github-actions` pkgs
   - package-ecosystem: github-actions
+    target-branch: dev
     directory: "/"
     schedule:
       interval: daily
