--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
 					},
 					"configurations": {
 						"dev-sw": {
-							"serviceWorker": true,
+							"serviceWorker": false,
 							"aot": true,
 							"verbose": true,
 							"outputHashing": "all",
@@ -80,7 +80,7 @@
 									"maximumError": "4kb"
 								}
 							],
-							"serviceWorker": true,
+							"serviceWorker": false,
 							"ngswConfigPath": "ngsw-config.json"
 						},
 						"stage": {
@@ -112,7 +112,7 @@
 									"maximumError": "4kb"
 								}
 							],
-							"serviceWorker": true,
+							"serviceWorker": false,
 							"ngswConfigPath": "ngsw-config.json"
 						}
 					},
