--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,46 +5,72 @@ on:
     branches: [master]
 
   workflow_dispatch:
-    inputs:
-      comment:
-        description: Comment on triggering this workflow
-        required: false
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1 
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+            submodules: true
 
-      - name: Build Image with Server-Side Rendering & Push to Packages
-        uses: docker/build-push-action@v2.7.0
+      - name: Log into Harbor Registry
+        uses: docker/login-action@v1
         with:
-          context: .
-          file: Dockerfile
+          registry: harbor.disembark.dev
+          username: robot$deploy-7tv
+          password: ${{ secrets.REGISTRY_TOKEN }}
+
+      - uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+
+      - name: Build Image
+        id: build_step
+        uses: docker/build-push-action@v2
+        with:
           push: true
           tags: |
-            ghcr.io/seventv/app:${{ github.sha }}
-            ghcr.io/seventv/app:latest
+            harbor.disembark.dev/7tv/webapp:${{ github.sha }}
+            harbor.disembark.dev/7tv/webapp:latest
 
   deploy:
     name: Deploy (Production)
-    runs-on: self-hosted
-    needs: 
+    runs-on: ubuntu-latest
+    needs: # Run this after build
       - build
 
     steps:
-      - name: Deploy Production Server
-        uses: fifsky/ssh-action@master
-        with:
-          command: docker pull ghcr.io/seventv/autodeploy:latest && docker run --rm --net=host -v /opt/autodeploy/config.yaml:/app/config.yaml -v /opt/autodeploy/private.key:/app/private.key ghcr.io/seventv/autodeploy:latest --service webapp --tag ${{ github.sha }}
-          host: ${{ secrets.DEPLOY_HOST }}
-          user: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+        # Checkout repository
+        - uses: actions/checkout@v2
+
+        # Clone k8s repository
+        - uses: actions/checkout@v2
+          with:
+            repository: SevenTV/k8s
+            path: k8s
+            token: ${{ secrets.SERVICE_PAT }}
+
+        # Deploy to k8s
+        - name: Install kubectl&
+          uses: azure/setup-kubectl@v1
+
+        - name: Apply Deployment & Rollout
+          env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBECONFIG }}
+            KUBE_RESOURCE: deploy
+            KUBE_IMAGE_PATCH: >-
+              [
+                { "op": "replace", "path": "/spec/template/spec/containers/0/image", "value": "harbor.disembark.dev/7tv/webapp:${{ github.sha }}" }
+              ]
+          run: |
+            mkdir -p ~/.kube
+            (echo $KUBE_CONFIG_DATA | base64 -d) >> ~/.kube/config
+            kubectl config use-context autodeploy@SevenTV
+
+            kubectl apply -f k8s/cluster/7tv/webapp.yaml
+            kubectl patch $KUBE_RESOURCE seventv-webapp --type="json" -p="$KUBE_IMAGE_PATCH"
+
+            kubectl rollout rest
