--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Typings"]
 	path = Typings
-	url = git@github.com:SevenTV/Typings.git
+	url = https://github.com/SevenTV/Typings.git
+	branch = master
