--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -74,4 +74,4 @@ jobs:
             kubectl apply -f k8s/cluster/7tv/webapp.yaml
             kubectl patch $KUBE_RESOURCE seventv-webapp --type="json" -p="$KUBE_IMAGE_PATCH"
 
-            kubectl rollout rest
+            kubectl rollout restart -n app $KUBE_RESOURCE/seventv-webapp
