--- a/.github/workflows/stage-pr.yaml
+++ b/.github/workflows/stage-pr.yaml
@@ -13,41 +13,70 @@ env:
 jobs:
   build:
     name: Build App (Stage)
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: ${{ contains(github.event.pull_request.labels.*.name, 'staged') }}
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1 
+      - name: Log into Harbor Registry
+        uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: harbor.disembark.dev
+          username: robot$deploy-7tv
+          password: ${{ secrets.REGISTRY_TOKEN }}
 
-      - name: Build Image with Server-Side Rendering & Push to Packages
-        uses: docker/build-push-action@v2.7.0
+      - uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+
+      - name: Build Image
+        id: build_step
+        uses: docker/build-push-action@v2
         with:
           build-args: |
             stage=1
-          context: .
-          file: Dockerfile
           push: true
           tags: |
-            ghcr.io/seventv/app/stage:${{ github.sha }}
-            ghcr.io/seventv/app/stage:latest
+            harbor.disembark.dev/7tv-stage/webapp:${{ github.sha }}
+            harbor.disembark.dev/7tv-stage/webapp:latest
+
   deploy:
-    name: Deploy (Stage)
-    runs-on: self-hosted
-    needs: 
+    name: Deploy App (Stage)
+    runs-on: ubuntu-latest
+    needs: # Run this after build
       - build
 
     steps:
-      - name: Deploy Stage Server
-        uses: fifsky/ssh-action@master
-        with:
-          command: docker pull ghcr.io/seventv/autodeploy:latest && docker run --rm --net=host -v /opt/autodeploy/config.yaml:/app/config.yaml -v /opt/autodeploy/private.key:/app/private.key ghcr.io/seventv/autodeploy:latest --service webapp-stage --tag ${{ github.sha }}
-          host: ${{ secrets.DEPLOY_HOST }}
-          user: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+        # Checkout repository
+        - uses: actions/checkout@v2
+
+        # Clone k8s repository
+        - uses: actions/checkout@v2
+          with:
+            repository: SevenTV/k8s
+            path: k8s
+            token: ${{ secrets.SERVICE_PAT }}
+
+        # Deploy to k8s
+        - name: Install kubectl&
+          uses: azure/setup-kubectl@v1
+
+        - name: Apply Deployment & Rollout
+          env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBECONFIG_STAGE }}
+            KUBE_RESOURCE: deploy
+            KUBE_IMAGE_PATCH: >-
+              [
+                { "op": "replace", "path": "/spec/template/spec/containers/0/image", "value": "harbor.disembark.dev/7tv-stage/webapp:${{ github.sha }}" }
+              ]
+          run: |
+            mkdir -p ~/.kube
+            (echo $KUBE_CONFIG_DATA | base64 -d) >> ~/.kube/config
+            kubectl config use-context autodeploy@SevenTV
+
+            kubectl apply -f k8s/cluster/7tv-stage/webapp-angular.yaml
+            kubectl patch $KUBE_RESOURCE seventv-webapp --type="json" -p="$KUBE_IMAGE_PATCH"
+
+            kubectl rollout restart $KUBE_RESOURCE/seventv-webapp
