--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.9.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider ng serve",
     "build": "ng build --configuration=production",
     "dev:build": "ng build --configuration=dev-sw",
     "watch": "ng build --watch --configuration=dev-sw",
@@ -41,12 +41,14 @@
     "compression": "^1.7.4",
     "date-fns": "^2.23.0",
     "express": "^4.15.2",
+    "ng-particles": "^2.20.5",
     "ngx-cookie-service": "^12.0.3",
     "ngx-markdown": "^12.0.1",
     "rxjs": "~6.6.7",
     "ssr-window": "^4.0.0",
     "superagent": "^6.1.0",
     "tslib": "^2.3.1",
+    "tsparticles": "^1.37.5",
     "twitch-player": "^2.0.2",
     "zone.js": "~0.11.4"
   },
